# my_rag

./: main.py  pyproject.toml  requirements.txt
api/: __init__.py
api/chat/: __init__.py  get_models.py  get_response.py  router.py
api/documents/: __init__.py  load.py  load_file.py  process_text.py  router.py  split_text.py
api/models/: request.py
api/rag/: router.py
chat/: gemini.py
data/: aws.pptx  journal_f.docx  re.txt  s.csv  speech_pfe.txt  survey.csv  wf.html
data/extracts/manual/: aws.pptx.txt  jf.docx.txt  jp.pdf.txt  s.csv.txt  wp.png.txt
data/extracts/unstructured/: jf.docx.txt  rf.pdf.txt  wp.png.txt
document/: __init__.py  chunking.py  loader_manual.py  loader_unstructured.py
models/: __init__.py  exceptions.py  request.py  response.py  router.py
routers/: __init__.py  chat.py  documents.py
services/chat/: __init__.py  gemini.py  get_models_service.py  get_response_service.py
services/documents/: __init__.py  chunk.py  load_file_service.py  load_manual.py  load_unstructured.py  process_text_service.py  split_text_service.py
