[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.96.0",
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
    "langchain-text-splitters>=1.1.2",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.2.2",
    "pandas>=3.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-pptx>=1.0.2",
    "trafilatura>=2.0.0",
    "uvicorn>=0.48.0",
]
